src/objects/LeanData__Upload_Account_Match__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account_Id__c</fullName>
        <label>Account Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__BillingCity__c</fullName>
        <label>BillingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__BillingPostalCode__c</fullName>
        <label>BillingPostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__BillingState__c</fullName>
        <label>BillingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__BillingStreet__c</fullName>
        <label>BillingStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__CSV_Job_Id__c</fullName>
        <label>CSV Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__CSV_Row_Id__c</fullName>
        <label>CSV Row Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Match_Type__c</fullName>
        <label>Match Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LeanData__ShippingCity__c</fullName>
        <label>ShippingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__ShippingPostalCode__c</fullName>
        <label>ShippingPostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__ShippingState__c</fullName>
        <label>ShippingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__ShippingStreet__c</fullName>
        <label>ShippingStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Upload Account Match</label>
    <nameField>
        <label>Upload Account Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upload Account Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>